hphp/hack/test/typecheck/inout/bad_inout_decl_generator.php.exp
File "bad_inout_decl_generator.php", line 3, characters 28-29:
Inout parameters cannot be defined on async functions, generators or coroutines. (NastCheck[3042])
